# inifiles

./: README.md  dune  dune-project  inifiles.ml  inifiles.mli  inifiles.opam  ocaml-inifiles.opam  opam
.github/workflows/: dune.yml
test/: broken_section.ml  correct_parse.ini  correct_parse.ml  dune  empty_token.ml  newline_sections.ml  newline_sections.multiple.ini  newline_sections.single.ini  no_trailing_eol.ini  no_trailing_eol.ml  specification.ini  specification.ml
