opam-version: "2.0"
synopsis: "An ini file parser"
maintainer: ["Emile Trotignon"]
license: "LGPL-2.1-or-later"
homepage: "https://github.com/ahrefs/inifiles"
depends: ["ocaml" "ocamlfind" "pcre2"]
conflicts: ["ocaml-option-bytecode-only"]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
